fixed css error with footer and container spacing

--- a/src/components/app/css/App.scss
+++ b/src/components/app/css/App.scss
@@ -41,6 +41,7 @@ $red: #fe346e;
       .container {
         position: relative;
         width: 90vw;
+        min-height: 100vh;
       }
     }
   }
